[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyOpenHaptics"
version = "1.0.1"
description = "A minimalist Python wrapper for OpenHaptics"
authors = [
    {name = "Mikel De Iturrate Reyzabal", email = "mikel.de_iturrate_reyzabal@kcl.ac.uk"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[projects.url]
Homepage = "https://github.com/mikelitu/pyOpenHaptics"